...

    private var accessibilityLabel: String {
        switch role {
        case .rewind:
            "Start over"
        case .pass:
            "Pass"
        case .like:
            "Like"
        case .superLike:
            "Go get this now"
        case .filter:
            "Search menu"
        }
    }
...
